# ksokoban

./: .git-blame-ignore-revs  .kde-ci.yml  AUTHORS  Array.C  Array.H  Bookmark.C  Bookmark.H  Bookmark.cpp  Bookmark.h  CMakeLists.txt  HiRes.C  HiRes.H  History.C  History.H  History.cpp  History.h  HtmlPrinter.C  HtmlPrinter.H  HtmlPrinter.cpp  HtmlPrinter.h  ImageData.C  ImageData.H  ImageData.cpp  ImageData.h  InternalCollections.C  InternalCollections.H  InternalCollections.cpp  InternalCollections.h  LevelCollection.C  LevelCollection.H  LevelCollection.cpp  LevelCollection.h  LevelMap.C  LevelMap.H  LevelMap.cpp  LevelMap.h  LowRes.C  LowRes.H  MainWindow.C  MainWindow.H  (+49 more)
cmake/: FindPOVRay.cmake
data/: CMakeLists.txt  Makefile.am  index-1.html  index.sgml  ksokoban.desktop  ksokoban.kdelnk  ksokoban.xpm  large-ksokoban.xpm  mini-ksokoban.xpm  org.kde.ksokoban.desktop  org.kde.ksokoban.metainfo.xml
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index-3.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
icons/: CMakeLists.txt
images/: CMakeLists.txt  Makefile  Makefile.am  bin2c.c  eastwall.pov  floor.pov  goal.pov  halfstone_2.pov  halfstone_4.pov  horizwall.pov  man.pov  man_common.inc  object.pov  saveman.pov  stone_1.pov  stone_2.pov  stone_3.pov  stone_4.pov  stone_5.pov  stone_6.pov  treasure.pov  vertiwall.pov  wall_common.inc  westwall.pov
images/20/: Makefile.am  eastwall.ppm  floor.ppm  goal.ppm  horizwall.ppm  man.ppm  object.ppm  saveman.ppm  treasure.ppm  vertiwall.ppm  westwall.ppm
images/32/: Makefile.am  eastwall.ppm  floor.ppm  goal.ppm  horizwall.ppm  man.ppm  object.ppm  saveman.ppm  treasure.ppm  vertiwall.ppm  westwall.ppm
images/40/: Makefile.am  eastwall.ppm  floor.ppm  goal.ppm  horizwall.ppm  man.ppm  object.ppm  saveman.ppm  treasure.ppm  vertiwall.ppm  westwall.ppm
levels/: CMakeLists.txt  Makefile.am  level.data
po/ar/: ksokoban.po
po/bs/: ksokoban.po
po/ca/: ksokoban.po
po/ca/docs/ksokoban/: index.docbook
po/ca@valencia/: ksokoban.po
po/cs/: ksokoban.po
po/de/: ksokoban.po
po/de/docs/ksokoban/: index.docbook
po/en_GB/: ksokoban.po
po/es/: ksokoban.po
po/es/docs/ksokoban/: index.docbook
po/et/: ksokoban.po
po/eu/: ksokoban.po
po/fi/: ksokoban.po
po/fr/: ksokoban.po
po/ga/: ksokoban.po
po/gl/: ksokoban.po
po/hu/: ksokoban.po
po/it/: ksokoban.po
po/it/docs/ksokoban/: index.docbook
po/ja/: ksokoban.po
po/ka/: ksokoban.po
po/ko/: ksokoban.po
po/lt/: ksokoban.po
po/mr/: ksokoban.po
po/nb/: ksokoban.po
po/nl/: ksokoban.po
po/nl/docs/ksokoban/: index.docbook
po/nn/: ksokoban.po
po/pl/: ksokoban.po
po/pt/: ksokoban.po
po/pt_BR/: ksokoban.po
po/ru/: ksokoban.po
po/sk/: ksokoban.po
po/sl/: ksokoban.po
po/sv/: ksokoban.po
po/sv/docs/ksokoban/: index.docbook
po/tr/: ksokoban.po
po/ug/: ksokoban.po
po/uk/: ksokoban.po
po/uk/docs/ksokoban/: index.docbook
po/zh_CN/: ksokoban.po
po/zh_TW/: ksokoban.po
src/: Bookmark.cpp  Bookmark.h  CMakeLists.txt  GroundItem.cpp  GroundItem.h  History.cpp  History.h  HtmlPrinter.cpp  HtmlPrinter.h  ImageData.cpp  ImageData.h  InternalCollections.cpp  InternalCollections.h  LevelCollection.cpp  LevelCollection.h  LevelMap.cpp  LevelMap.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  MapDelta.cpp  MapDelta.h  Messages.sh  ModalLabel.cpp  ModalLabel.h  Move.cpp  Move.h  MoveSequence.cpp  MoveSequence.h  PathFinder.cpp  PathFinder.h  PlayField.cpp  PlayField.h  PlayFieldView.cpp  PlayFieldView.h  Queue.h  SimpleTextItem.cpp  SimpleTextItem.h  StaticImage.cpp  (+13 more)
src/images/: CMakeLists.txt  bin2c.c  data.c  floor_common.inc  goal.pov  halfstone_1.pov  halfstone_2.pov  halfstone_3.pov  halfstone_4.pov  man.pov  man_common.inc  object.pov  saveman.pov  stone_1.pov  stone_2.pov  stone_3.pov  stone_4.pov  stone_5.pov  stone_6.pov  stone_common.inc  treasure.pov
src/levels/: CMakeLists.txt  Makefile
themes/: CMakeLists.txt  ksokoban_classic.desktop  skladnik_classic.desktop
